# mikuji

./: Cargo.toml  DATA_NOTICE.md  LICENSE  README.md  build.rs  test_kitty.sh  test_layout.sh
assets/: data.json
src/: cli.rs  fortune.rs  image.rs  main.rs  paths.rs
